--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<a href="http://39.97.230.138/owncloud/">
+    <button>Click me</button>
+</a>
 </body>
 </html>
